--- a/css/quiz.css
+++ b/css/quiz.css
@@ -137,8 +137,8 @@ visibility: hidden; opacity: 0;}
 
 	#mathQuiz .intro {width:300px; top: 135px; left: 330px;}
 
-	#mathQuiz .question {width: 550px; position: absolute; top: 225px; left: 40px;}
-	#mathQuiz .question .txt {font-size: 1.6em; margin 0px 0px 20px 0px;}
+	#mathQuiz .question {width: 300px; top: 235px; left: 330px;}
+	#mathQuiz .question .txt {font-size: 1.4em; margin 0px 0px 20px 0px;}
 	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; }
 	#mathQuiz .question .ans.image {min-height: 45px; background-size: auto 45px;}
 	#mathQuiz .question .ans.image:hover {background-color:  #000;}
