--- a/css/quiz.css
+++ b/css/quiz.css
@@ -140,7 +140,8 @@ visibility: hidden; opacity: 0;}
 	#mathQuiz .intro {width:300px; top: 115px; left: 330px;}
 
 	#mathQuiz .question {width: 300px; top: 150px; left: 330px;}
-	#mathQuiz .question .txt {font-size: 1.4em; margin 0px 0px 20px 0px; background-size:80% 100%;}
+	#mathQuiz .question .txt {font-size: 1.2em; margin 0px 0px 20px 0px; background-size:80% 100%;}
+	#mathQuiz .question .question_image { min-height:120px; background-repeat:no-repeat; background-position:center; background-size:80% 100%;}
 	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; }
 	#mathQuiz .question .ans.image {min-height: 45px; background-size: auto 45px;}
 	#mathQuiz .question .ans.image:hover {background-color:  #000;}
