--- a/css/quiz.css
+++ b/css/quiz.css
@@ -18,7 +18,7 @@ body { background-color: #fff; padding: 20px; }
 
 #mathQuiz h1 span {
 	display: block; font-family: 'Titillium Web', sans-serif;
-	font-size: 3em; line-height: 65px;
+	font-size: 3em; line-height: 55px;
 }
 #mathQuiz h2 { font-size: 3em; margin: 0px; font-weight: 100;}
 #mathQuiz h3 { font-size: 2.4em; margin: 0px; font-weight: 100;}
@@ -26,7 +26,7 @@ body { background-color: #fff; padding: 20px; }
 #mathQuiz .btn {
 	display: inline-block; cursor: pointer; background-color: #c04b01;
 	color: #fff; text-decoration: none;
-	padding: 5px 15px; border-radius: 6px;
+	padding: 5px 15px;
 }
 
 /* Progress Bar */
@@ -54,9 +54,9 @@ body { background-color: #fff; padding: 20px; }
 #mathQuiz .progress div.correct::after { top:-5px; opacity: 1}
 
 /* Intro */
-#mathQuiz .intro { position: absolute; top:200px; left:40px; width: 550px;}
+#mathQuiz .intro { position: absolute; top:180px; left:40px; width: 550px;}
 #mathQuiz .intro p { margin:0px 0px 40px 0px;}
-
+#mathQuiz .btn { background-color:#960000; }
 /* Questions */
 #mathQuiz .question { width: 550px; position: absolute; top:170px; left: 660px}
 #mathQuiz .question .txt { font-size: 1.4em; margin: 0px 0px 20px 0px; }
