--- a/css/quiz.css
+++ b/css/quiz.css
@@ -7,32 +7,33 @@ body { background-color: #fff; padding: 20px; }
 	width: 650px; height: 1000px;
 	position: relative;
 	overflow: hidden;;
-	color: #000;
-	background:#fff url(/background_logo.png) no-repeat 0px 0px; background-size: cover;
+	color: #fff;
+	background:#000 url() no-repeat 0px 0px;
 }
 
 #mathQuiz h1 {
 	font-weight: 100; font-size: 1.5em; text-transform: uppercase; margin: 0px;
-	position: absolute; top: 25px; left: 36px; color:#960000;
+	position: absolute; top: 25px; left: 36px;
 }
 
 #mathQuiz h1 span {
 	display: block; font-family: 'Titillium Web', sans-serif;
-	font-size: 3em; line-height: 55px; color:#000;
+	font-size: 3em; line-height: 55px;
 }
-#mathQuiz h2 { font-size: 2.5em; margin: 0px; font-weight: 100;}
-#mathQuiz h3 { font-size: 2.1em; margin: 0px; font-weight: 100;}
+#mathQuiz h2 { font-size: 3em; margin: 0px; font-weight: 100;}
+#mathQuiz h3 { font-size: 2.4em; margin: 0px; font-weight: 100;}
 #mathQuiz p { margin:0px 0px 14px 0px;}
 #mathQuiz p span { margin:0px 0px 10px 0px;}
 #mathQuiz .btn {
-	display: inline-block; cursor: pointer; background-color: #960000;
+	display: inline-block; cursor: pointer; background-color: #c04b01;
 	color: #fff; text-decoration: none;
 	padding: 5px 15px;
 }
+
 #mathQuiz .startbtn {
 	display: inline-block; cursor: pointer; background-color: #960000;
 	color: #fff; text-decoration: none;
-	padding: 15px 25px; font-size: 3em;
+	padding: 15px 25px;
 }
 
 #mathQuiz .keybtn {
