--- a/css/quiz.css
+++ b/css/quiz.css
@@ -4,11 +4,12 @@ body { background-color: #fff; padding: 20px; }
 
 #mathQuiz {
    font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400;
-	width: 650px; height: 1000px;
+	width: 100%; height: 1200px;
 	position: relative;
 	overflow: hidden;;
 	color: #000;
-	background:#fff url(/background_logo.png) no-repeat 0px 0px;
+	/*background:#fff url(/background_logo.png) no-repeat 0px 0px;*/
+	background-size:100%;
 }
 
 #mathQuiz h1 {
@@ -31,8 +32,19 @@ body { background-color: #fff; padding: 20px; }
 }
 #mathQuiz .startbtn {
 	display: inline-block; cursor: pointer; background-color: #960000;
-	color: #fff; text-decoration: none;
+	color: #fff; text-decoration: none;font-size: 2em;
 	padding: 15px 25px;
+}
+
+#mathQuiz .mastercode { 
+	display: inline-block;
+	font-size: 1em;
+	width: 80%;
+	border: 2px solid rgba(238,189,102,.4); 
+	border-radius: 6px;
+	padding:10px;
+	margin: 0px 15px 15px 0px;
+	position: relative;
 }
 
 #mathQuiz .keybtn {
@@ -55,8 +67,8 @@ body { background-color: #fff; padding: 20px; }
 }
 
 #mathQuiz .progress div::after{
-	content: ''; display: block; position: absolute; top: -60px; left: -10px;
-	width: 65px; height: 40px; background: url() no-repeat 0px 0px;
+	content: ''; display: block; position: absolute; top: -200px; left: -5px;
+	width: 40px; height: 40px; background: url(kudos.png) no-repeat 0px 0px;
 	transition: opacity 1s, top 1s; opacity 0;
 }
 
@@ -70,9 +82,10 @@ body { background-color: #fff; padding: 20px; }
 #mathQuiz .intro p { margin:0px 0px 40px 0px;}
 #mathQuiz .btn { background-color:#960000; }
 /* Questions */
-#mathQuiz .question { width: 550px; position: absolute; top:170px; left: 660px}
+#mathQuiz .question { width: 550px; position: absolute; top:170px; left: 660px;}
 #mathQuiz .question .txt { font-size: 1.4em; margin: 0px 0px 20px 0px; }
-#mathQuiz .question .question_image { max-height:200px; position:center; width:auto;}
+#mathQuiz .question .question_image { position:center; width:100%;}
+#mathQuiz .question .inactive{display:none;}
 
 #mathQuiz .question .keyans { 
 	display: inline-block;
@@ -90,7 +103,7 @@ body { background-color: #fff; padding: 20px; }
 	font-size: 1.1em;
 	width: 225px;
 	border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 6px;
+	border-radius: 0px;
 	padding:10px;
 	margin: 0px 15px 15px 0px;
 	position: relative;
@@ -101,6 +114,7 @@ body { background-color: #fff; padding: 20px; }
 	min-height:110px; padding: 0px;
 	background-repeat: no-repeat;
 	background-position: 0px 0px;
+	background-size:auto 70px;
 }
 
 #mathQuiz .question .ans.selected { border-color: #be4616 }
@@ -132,9 +146,9 @@ visibility: hidden; opacity: 0;}
 #mathQuiz .answered .feedback { visibility: visible; opacity: 1; margin-top: 10px}
 
 /* Results */
-#mathQuiz .results { position: absolute; top:225px; left: 660px; width: 550px }
+#mathQuiz .results { position: absolute; top:225px; left: 660px; width: 550px;}
 
-#mathQuiz .results .share { margin-top: 40px; }
+#mathQuiz .results .share { margin-top: 40px; margin-bottom:10px; }
 
 #mathQuiz .results .share a.btn{ 
 	margin-right: 20px; padding: 9px,15px, 8px, 42px;
@@ -145,16 +159,19 @@ visibility: hidden; opacity: 0;}
 
 #mathQuiz .results .share a.btn.email { background-color: #f0a121;}
 #mathQuiz .results .share a.btn.twitter { background-color: #59adeb;}
+#mathQuiz .results .share a.btn.domore { background-color: #f0a121;}
 #mathQuiz .results a.btn.end { background-color: #960000; }
+/*#mathQuiz .results .inactive{visibility:hidden;}*/
 
 #mathQuiz .active, #mathQuiz .inactive { transition:left 0.5s ease-in-out;}
-#mathQuiz .active { left: 40px;}
+#mathQuiz .active { left: 40px; visibility:visible;}
+/*#mathQuiz .results .inactive{display:none;}*/
 #mathQuiz .intro.inactive, #mathQuiz.inactive.answered {left:-1350px; }
 #mathQuiz .footer { position:fixed; bottom: 0; color:#666; font-size: 0.7em;}
 
 @media screen and (max-width: 650px){
 	body {padding: 0px; margin: 0px;}
-	#mathQuiz {width:320px; background-size: 320px auto; }
+	#mathQuiz {width:100%; background-size: 100%; }
 	#mathQuiz h1 { width:300px;  font-size: 1em; top: 25px; left:25px;}
 	#mathQuiz h1 span { line-height: 43px;	}
 	#mathQuiz h2 {margin: 0px;}
@@ -162,14 +179,14 @@ visibility: hidden; opacity: 0;}
 
 	#mathQuiz .progress {width: 300px; top: 110px; left: 25px;}
 	#mathQuiz .progress div { width: 25px; height: 25px; margin-right: 20px;}
-	#mathQuiz .progress div::after {top: -30px; width: 53px; height: :33px;}
+	#mathQuiz .progress div::after {width: 53px; height: :33px;}
 
 	#mathQuiz .intro {width:300px; top: 115px; left: 330px;}
 
 	#mathQuiz .question {width: 300px; top: 150px; left: 330px;}
 	#mathQuiz .question .txt {font-size: 1.2em; margin 0px 0px 20px 0px; background-size:80% 100%;}
-	#mathQuiz .question .question_image { min-height:120px; background-repeat:no-repeat; background-position:center; background-size:80% 100%;}
-	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; }
+	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 100%;}
+	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; width:90%;}
 	#mathQuiz .question .ans.image {max-height: 60px; background-size: auto 45px;}
 	#mathQuiz .question .ans.image:hover {background-color:  #000;}
 
@@ -177,6 +194,6 @@ visibility: hidden; opacity: 0;}
 	#mathQuiz .results .share {margin-top: 20px;}
 	#mathQuiz .results a.btn {margin-bottom: 20px;}
 
-	#mathQuiz .active {left: 25px;}
+	#mathQuiz .active {left: 25px; width:85%;}
 	#mathQuiz .intro.inactive, #mathQuiz .inactive.answered {left: :-650px;}
 }
