--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,25 +1,28 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
-body { background-color: #fff; padding: 20px; }
+body { background-color: #fff; width:100%;}
+
 
 #mathQuiz {
-   font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400;
-	width: 100%; height: 1200px;
-	position: relative;
-	overflow: hidden;;
-	color: #000;
+   font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400; min-height: 1000px; 
+   position: relative;	overflow: hidden;;	color: #000;background-size:100%;
 	/*background:#fff url(/background_logo.png) no-repeat 0px 0px;*/
-	background-size:100%;
 }
 
+#mathQuiz .header{ z-index:999;}
+#mathQuiz .literally {width:100%; height: 1000px; bottom:0; background: white url(/paper.jpg) no-repeat;background-size:100% 100%;}
+#mathQuiz .literally .lc-picker { border-right: none; background-color: rgba(0,0,0,0.05);}
+#mathQuiz .literally.toolbar-at-top .lc-options {bottom:0; top:auto; border-bottom:none; position:fixed;background-color: rgba(0,0,0,0.05);}
+#mathQuiz .literally .lc-drawing.with-gui {right: 0;top: 0; position: absolute; left: 0; bottom:0;cursor: default;}
+
 #mathQuiz h1 {
-	font-weight: 100; font-size: 1.5em; text-transform: uppercase; margin: 0px;
-	position: absolute; top: 25px; left: 36px; color:#960000;
+	font-weight: 100; font-size: 1.2em; text-transform: uppercase; margin: 0px;
+	position: absolute; top: 50px; left: 72px; color:#960000;
 }
 
 #mathQuiz h1 span {
 	display: block; font-family: 'Titillium Web', sans-serif;
-	font-size: 2.5em; line-height: 55px; color:#000;
+	font-size: 2.5em; line-height: 1em; color:#000;
 }
 #mathQuiz h2 { font-size: 2.5em; margin: 0px; font-weight: 100;}
 #mathQuiz h3 { font-size: 2.1em; margin: 0px; font-weight: 100;}
@@ -37,14 +40,9 @@ body { background-color: #fff; padding: 20px; }
 }
 
 #mathQuiz .mastercode { 
-	display: inline-block;
-	font-size: 1em;
-	width: 80%;
-	border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 6px;
-	padding:10px;
-	margin: 0px 15px 15px 0px;
-	position: relative;
+	display: inline-block;	font-size: 1em;	width: 80%;
+	border: 2px solid rgba(238,189,102,.4);	border-radius: 6px;
+	padding:10px;	margin: 0px 15px 15px 0px;	position: relative;
 }
 
 #mathQuiz .keybtn {
@@ -54,16 +52,10 @@ body { background-color: #fff; padding: 20px; }
 }
 
 /* Progress Bar */
-#mathQuiz .progress {width: 550px; position: absolute;top:120px; left: 40px}
+#mathQuiz .progress {width: 550px; position: absolute;top:150px; left: 72px}
 #mathQuiz .progress div {
-	position: relative;
-	display: inline-block;
-	width: 30px;
-	height: 30px;
-	margin-right: 30px;
-	border-radius: 50%;
-	background-color: rgba(0, 0, 0, .2);
-	transition: background-color 1s;
+	position: relative;	display: inline-block; width: 30px; height: 30px; margin-right: 30px;
+	border-radius: 50%;	background-color: rgba(0, 0, 0, .2); transition: background-color 1s;
 }
 
 #mathQuiz .progress div::after{
@@ -81,64 +73,41 @@ body { background-color: #fff; padding: 20px; }
 #mathQuiz .intro { position: absolute; top:180px; left:40px; width: 550px;}
 #mathQuiz .intro p { margin:0px 0px 40px 0px;}
 #mathQuiz .btn { background-color:#960000; }
+
+
 /* Questions */
-#mathQuiz .question { width: 550px; position: absolute; top:170px; left: 660px;}
+#mathQuiz .question { width: 550px; position: absolute; top:200px; left: 660px; z-index:10;}
 #mathQuiz .question .txt { font-size: 1.4em; margin: 0px 0px 20px 0px; }
 #mathQuiz .question .question_image { position:center; width:80%;}
 #mathQuiz .question .inactive{display:none;}
 
 #mathQuiz .question .lineinput { 
-	display: run-in;
-	font-size: 1.4em;
-	width: 100px;
-	border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 6px;
-	padding:10px;
-	margin: 0px 15px 15px 0px;
-	position: relative;
+	display: run-in; font-size: 1.4em; width: 100px; border: 2px solid rgba(238,189,102,.4); 
+	padding:10px; margin: 0px 15px 15px 0px; position: relative; background-color:white; z-index:40;
 }
 
 #mathQuiz .question .keyans { 
-	display: inline-block;
-	font-size: 1.1em;
-	width: 225px;
-	border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 6px;
-	padding:10px;
-	margin: 0px 15px 15px 0px;
-	position: relative;
+	display: inline-block; font-size: 1.1em; width: 225px;border: 2px solid rgba(238,189,102,.4); 
+	padding:10px; margin: 0px 15px 15px 0px; position: relative;
 }
 
 #mathQuiz .question .ans { 
-	display: inline-block;
-	font-size: 1.1em;
-	width: 225px;
-	border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 0px;
-	padding:10px;
-	margin: 0px 15px 15px 0px;
-	position: relative;
+	display: inline-block; font-size: 1.1em; width: 225px; border: 2px solid rgba(238,189,102,.4); 
+	border-radius: 0px;	padding:10px; margin: 0px 15px 15px 0px; position: relative;
 }
 
 #mathQuiz .question .ans.image {
-	width:225px;
-	min-height:110px; padding: 0px;
-	background-repeat: no-repeat;
-	background-position: 0px 0px;
-	background-size:auto 70px;
+	width:225px; min-height:110px; padding: 0px; background-repeat: no-repeat;
+	background-position: 0px 0px; background-size:auto 70px;
 }
 
 #mathQuiz .question .ans.selected { border-color: #be4616 }
 #mathQuiz .question .ans.correct { border-color: #459a2e }
 
 #mathQuiz .question .ans::after {
-	content:'';
-	display: block; width: 20px; height: 20px;
-	background: #777 no-repeat 0px 0x;
-	background-size: 20px 20px;
-	position: absolute;
-	top: 5px;
-	right: 5px;
+	content:'';	display: block; width: 20px; height: 20px;
+	background: #777 no-repeat 0px 0x;	background-size: 20px 20px;
+	position: absolute;	top: 5px;	right: 5px;
 }
 
 #mathQuiz .question .ans.selected:after { background-image: url();}
@@ -149,8 +118,9 @@ body { background-color: #fff; padding: 20px; }
 #mathQuiz .question.answered .ans {cursor:default;}
 
 /* Feedback */
-#mathQuiz .feedback { color: #efbe5e; margin-top: 10px; transition: opacity 1.5s, margin-top 1.5s;
-visibility: hidden; opacity: 0;}
+#mathQuiz .feedback { 
+	color: #efbe5e; margin-top: 10px; transition: opacity 1.5s, margin-top 1.5s;
+	visibility: hidden; opacity: 0;}
 #mathQuiz .feedback .btn { margin-top:  5px; }
 #mathQuiz .feedback strong {color: #000}
 
@@ -175,26 +145,44 @@ visibility: hidden; opacity: 0;}
 /*#mathQuiz .results .inactive{visibility:hidden;}*/
 
 #mathQuiz .active, #mathQuiz .inactive { transition:left 0.5s ease-in-out;}
-#mathQuiz .active { left: 40px; visibility:visible;}
+#mathQuiz .active { left: 72px; visibility:visible;}
 /*#mathQuiz .results .inactive{display:none;}*/
 #mathQuiz .intro.inactive, #mathQuiz.inactive.answered {left:-1350px; }
-#mathQuiz .footer { position:fixed; bottom: 0; color:#666; font-size: 0.7em;}
+#mathQuiz .footer { position:fixed; bottom: 0; right:0;color:#666; font-size: 0.7em;}
+#mathQuiz .footer span {font-size: 2.3em; color:black;}
+
+#mathQuiz #scientificCalc11 {position:fixed;bottom:2.3em; right:0px; background-color:#ddd;font-size: 13px;	margin: 0; color: #555;
+	font-weight:bold; font-family: 'Roboto', sans-serif;}
+#mathQuiz #scientificCalc11 input{ font-size:13px; font-weight:bold; padding:5px; margin:5px;}	
+#mathQuiz #scientificCalc11  cell{ width:20%;	font-weight:bold}
+#mathQuiz #scientificCalc11  #results{ width:250px;background-color:#CCC; height:1.5em; margin:5px;	padding:3px;}
+#mathQuiz #scientificCalc11 .calcbttn {
+	border: 0px; cursor:pointer; font-family: 'Roboto', sans-serif, sans-serif;
+	color: #666; padding-left: 8px;	padding-right: 8px;	font-size: 13px;
+	background-repeat: no-repeat; background: #eee; background: -webkit-linear-gradient(#fff, #eee);
+    background: -moz-linear-gradient(top,  #fff,  #eee);
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#eeeeee');
+}
+#mathQuiz #scientificCalc11 #errmsg{
+	display:none; background-color:#960000; color:#fff; border-width:2px; border-style:solid;
+	border-color:#960000; font-weight:bold;
+}	
 
 @media screen and (max-width: 650px){
 	body {padding: 0px; margin: 0px;}
 	#mathQuiz {width:100%; background-size: 100%; }
-	#mathQuiz h1 { width:300px;  font-size: 1em; top: 25px; left:25px;}
+	#mathQuiz h1 { width:300px;  font-size: 1em; top: 40px; left:70px;}
 	#mathQuiz h1 span { line-height: 43px;	}
 	#mathQuiz h2 {margin: 0px;}
 	#mathQuiz h3 { font-size: 2.2em; margin-bottom: 15px;}
 
-	#mathQuiz .progress {width: 300px; top: 110px; left: 25px;}
+	#mathQuiz .progress {width: 300px; top: 110px; left: 70px;}
 	#mathQuiz .progress div { width: 25px; height: 25px; margin-right: 20px;}
 	#mathQuiz .progress div::after {width: 53px; height: :33px;}
 
 	#mathQuiz .intro {width:300px; top: 115px; left: 330px;}
 
-	#mathQuiz .question {width: 300px; top: 150px; left: 330px;}
+	#mathQuiz .question {width: 300px; top: 160px; left: 330px;}
 	#mathQuiz .question .txt {font-size: 1.2em; margin 0px 0px 20px 0px; background-size:80% 100%;}
 	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 100%;}
 	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; width:90%;}
@@ -204,7 +192,11 @@ visibility: hidden; opacity: 0;}
 	#mathQuiz .results {width: 260px; top: 150px; left: 330px;}
 	#mathQuiz .results .share {margin-top: 20px;}
 	#mathQuiz .results a.btn {margin-bottom: 20px;}
-
-	#mathQuiz .active {left: 25px; width:85%;}
+/*	#mathQuiz #c1{
+	    height:100%; width:100%; border: 1px solid black;background-color:black;
+	    opacity: 0.2; z-index:20;top:-50px;
+	}
+*/
+	#mathQuiz .active {left: 70px; width:85%;}
 	#mathQuiz .intro.inactive, #mathQuiz .inactive.answered {left: :-650px;}
 }
