--- a/css/quiz.css
+++ b/css/quiz.css
@@ -13,14 +13,17 @@ body { background-color: #fff; width:100%; }
 }
 
 #mathQuiz .header{ z-index:999;}
-#mathQuiz .literally {width:100%; height: 1000px; bottom:0; background: white url(/paper.jpg) no-repeat;background-size:100% 100%;}
-#mathQuiz .literally .lc-picker { border-right: none; background-color: rgba(0,0,0,0.05);}
+#mathQuiz .literally { width:100%; height: 1500px; bottom:0; background: white url(/paper.jpg) no-repeat;background-size:100% 100%;}
+#mathQuiz .lc-clear {position:fixed !important; top:0 !important; left:0px;}
+#mathQuiz .literally .lc-picker { top:20px;border-right: none; background-color: rgba(0,0,0,0.05); width:30px;}
+#mathQuiz .literally .color-well { width:30px; }
+#mathQuiz .literally .lc-picker .toolbar-button.selected:not(.disabled){ background-color: rgba(150,0,0,0.2); }
 #mathQuiz .literally.toolbar-at-top .lc-options {bottom:0; top:auto; border-bottom:none; position:fixed;background-color: rgba(0,0,0,0.05);}
 #mathQuiz .literally .lc-drawing.with-gui {right: 0;top: 0; position: absolute; left: 0; bottom:0;cursor: default;}
 
 #mathQuiz h1 {
 	font-weight: 100; font-size: 1.2em; text-transform: uppercase; margin: 0px;
-	position: absolute; top: 50px; left: 72px; color:#960000;
+	position: absolute; top: 50px; left: 40px; color:#960000;
 }
 
 #mathQuiz h1 span {
@@ -55,7 +58,7 @@ body { background-color: #fff; width:100%; }
 }
 
 /* Progress Bar */
-#mathQuiz .progress {width: 550px; position: absolute;top:150px; left: 72px}
+#mathQuiz .progress {width: 550px; position: absolute;top:150px; left: 40px}
 #mathQuiz .progress div {
 	position: relative;	display: inline-block; width: 30px; height: 30px; margin-right: 30px;
 	border-radius: 50%;	background-color: rgba(0, 0, 0, .2); transition: background-color 1s;
@@ -148,7 +151,7 @@ body { background-color: #fff; width:100%; }
 /*#mathQuiz .results .inactive{visibility:hidden;}*/
 
 #mathQuiz .active, #mathQuiz .inactive { transition:left 0.5s ease-in-out;}
-#mathQuiz .active { left: 72px; visibility:visible;}
+#mathQuiz .active { left: 40px; visibility:visible;}
 /*#mathQuiz .results .inactive{display:none;}*/
 #mathQuiz .intro.inactive, #mathQuiz.inactive.answered {left:-1350px; }
 #mathQuiz .footer { position:fixed; bottom: 0; right:0;color:#666; font-size: 0.7em;z-index:1000;}
@@ -174,12 +177,12 @@ body { background-color: #fff; width:100%; }
 @media screen and (max-width: 650px){
 	body {padding: 0px; margin: 0px;}
 	#mathQuiz {width:100%; background-size: 100%; }
-	#mathQuiz h1 { width:300px;  font-size: 1em; top: 40px; left:70px;}
+	#mathQuiz h1 { width:300px;  font-size: 1em; top: 40px; left:40px;}
 	#mathQuiz h1 span { line-height: 43px;	}
 	#mathQuiz h2 {margin: 0px;}
 	#mathQuiz h3 { font-size: 2.2em; margin-bottom: 15px;}
 
-	#mathQuiz .progress {width: 300px; top: 110px; left: 70px;}
+	#mathQuiz .progress {width: 300px; top: 110px; left: 40px;}
 	#mathQuiz .progress div { width: 25px; height: 25px; margin-right: 20px;}
 	#mathQuiz .progress div::after {width: 53px; height: :33px;}
 
@@ -187,7 +190,7 @@ body { background-color: #fff; width:100%; }
 
 	#mathQuiz .question {width: 300px; top: 160px; left: 330px;}
 	#mathQuiz .question .txt {font-size: 1.2em; margin 0px 0px 20px 0px; background-size:80% 100%;}
-	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 100%;}
+	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 80%;}
 	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; width:90%;}
 	#mathQuiz .question .ans.image {max-height: 60px; background-size: auto 45px;}
 	#mathQuiz .question .ans.image:hover {background-color:  #000;}
@@ -195,12 +198,6 @@ body { background-color: #fff; width:100%; }
 	#mathQuiz .results {width: 260px; top: 150px; left: 330px;}
 	#mathQuiz .results .share {margin-top: 20px;}
 	#mathQuiz .results a.btn {margin-bottom: 20px;}
-
-/*	#mathQuiz #c1{
-	    height:100%; width:100%; border: 1px solid black;background-color:black;
-	    opacity: 0.2; z-index:20;top:-50px;
-	}
-*/
-	#mathQuiz .active {left: 70px; width:85%;}
+	#mathQuiz .active {left: 40px; width:80%;}
 	#mathQuiz .intro.inactive, #mathQuiz .inactive.answered {left: :-650px;}
 }
