--- a/css/quiz.css
+++ b/css/quiz.css
@@ -1,23 +1,32 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web:900|Roboto:400,100);
 
-body { background-color: #fff; width:100%;}
+body { background-color: #fff; width:100%; }
 
+.visibilityhide{
+	visibility:hidden;
+}
 
 #mathQuiz {
-   font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400; height: 1500px; 
-   position: relative;	overflow: hidden;;	color: #000;background-size:100%;
+	font-family: 'Roboto', sans-serif; font-size: 16px; font-weight: 400; height: 1500px; 
+	position: relative;	overflow: hidden;;	color: #000;background-size:100%;
 	/*background:#fff url(/background_logo.png) no-repeat 0px 0px;*/
 }
 
+#mathQuiz .noselect { cursor: default; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none;
+    -moz-user-select: none; -ms-user-select: none; user-select: none; }
+
 #mathQuiz .header{ z-index:999;}
-#mathQuiz .literally {width:100%; height: 1000px; bottom:0; background: white url(/paper.jpg) no-repeat;background-size:100% 100%;}
-#mathQuiz .literally .lc-picker { border-right: none; background-color: rgba(0,0,0,0.05);}
+#mathQuiz .literally { width:100%; height: 1500px; bottom:0; background: white url(/paper.jpg) no-repeat;background-size:100% 100%;}
+#mathQuiz .lc-clear {position:fixed !important; top:0px !important; left:0px; background-color: #960000;color:white;}
+#mathQuiz .literally .lc-picker { top:25px;border-right: none; background-color: rgba(0,0,0,0.05); width:30px; position:fixed;}
+#mathQuiz .literally .color-well { width:30px; }
+#mathQuiz .literally .lc-picker .toolbar-button.selected:not(.disabled){ background-color: rgba(150,0,0,0.2); }
 #mathQuiz .literally.toolbar-at-top .lc-options {bottom:0; top:auto; border-bottom:none; position:fixed;background-color: rgba(0,0,0,0.05);}
-#mathQuiz .literally .lc-drawing.with-gui {right: 0;top: 0; position: absolute; left: 0; bottom:0;cursor: default;}
+#mathQuiz .literally .lc-drawing.with-gui {right: 0;top: 0; position: absolute; left: 0; bottom:0;cursor: default;z-index:40;}
 
 #mathQuiz h1 {
 	font-weight: 100; font-size: 1.2em; text-transform: uppercase; margin: 0px;
-	position: absolute; top: 50px; left: 72px; color:#960000;
+	position: absolute; top: 50px; left: 45px; color:#960000;
 }
 
 #mathQuiz h1 span {
@@ -52,7 +61,7 @@ body { background-color: #fff; width:100%;}
 }
 
 /* Progress Bar */
-#mathQuiz .progress {width: 550px; position: absolute;top:150px; left: 72px}
+#mathQuiz .progress {width: 550px; position: absolute;top:100px; left: 45px}
 #mathQuiz .progress div {
 	position: relative;	display: inline-block; width: 30px; height: 30px; margin-right: 30px;
 	border-radius: 50%;	background-color: rgba(0, 0, 0, .2); transition: background-color 1s;
@@ -70,15 +79,15 @@ body { background-color: #fff; width:100%;}
 #mathQuiz .progress div.correct::after { top:-5px; opacity: 1}
 
 /* Intro */
-#mathQuiz .intro { position: absolute; top:180px; left:40px; width: 550px;}
+#mathQuiz .intro { position: absolute; top:180px; left:45px; width: 550px;}
 #mathQuiz .intro p { margin:0px 0px 40px 0px;}
 #mathQuiz .btn { background-color:#960000; }
 
 
 /* Questions */
-#mathQuiz .question { width: 550px; position: absolute; top:200px; left: 660px; z-index:10;}
-#mathQuiz .question .txt { font-size: 1.4em; margin: 0px 0px 20px 0px; }
-#mathQuiz .question .question_image { position:center; width:80%;}
+#mathQuiz .question { width: 550px; position: absolute; top:160px; left: 660px;}
+#mathQuiz .question .txt { font-size: 1.4em; margin: 0px 0px 20px 0px; z-index:40;}
+#mathQuiz .question .question_image { position:center; width:90%; z-index:-1000;}
 #mathQuiz .question .inactive{display:none;}
 
 #mathQuiz .question .lineinput { 
@@ -145,14 +154,14 @@ body { background-color: #fff; width:100%;}
 /*#mathQuiz .results .inactive{visibility:hidden;}*/
 
 #mathQuiz .active, #mathQuiz .inactive { transition:left 0.5s ease-in-out;}
-#mathQuiz .active { left: 72px; visibility:visible;}
+#mathQuiz .active { left: 45px; visibility:visible;}
 /*#mathQuiz .results .inactive{display:none;}*/
 #mathQuiz .intro.inactive, #mathQuiz.inactive.answered {left:-1350px; }
-#mathQuiz .footer { position:fixed; bottom: 0; right:0;color:#666; font-size: 0.7em;}
+#mathQuiz .footer { position:fixed; bottom: 0; right:0;color:#666; font-size: 0.7em;z-index:1000;}
 #mathQuiz .footer span {font-size: 2.3em; color:black;}
 
 #mathQuiz #scientificCalc11 {position:fixed;bottom:2.3em; right:0px; background-color:#ddd;font-size: 13px;	margin: 0; color: #555;
-	font-weight:bold; font-family: 'Roboto', sans-serif; z-index:1001;}
+	font-weight:bold; font-family: 'Roboto', sans-serif;z-index:1001;}
 #mathQuiz #scientificCalc11 input{ font-size:13px; font-weight:bold; padding:5px; margin:5px;}	
 #mathQuiz #scientificCalc11  cell{ width:20%;	font-weight:bold}
 #mathQuiz #scientificCalc11  #results{ width:250px;background-color:#CCC; height:1.5em; margin:5px;	padding:3px;}
@@ -171,20 +180,20 @@ body { background-color: #fff; width:100%;}
 @media screen and (max-width: 650px){
 	body {padding: 0px; margin: 0px;}
 	#mathQuiz {width:100%; background-size: 100%; }
-	#mathQuiz h1 { width:300px;  font-size: 1em; top: 40px; left:70px;}
+	#mathQuiz h1 { width:300px;  font-size: 1em; top: 40px; left:45px;}
 	#mathQuiz h1 span { line-height: 43px;	}
 	#mathQuiz h2 {margin: 0px;}
 	#mathQuiz h3 { font-size: 2.2em; margin-bottom: 15px;}
 
-	#mathQuiz .progress {width: 300px; top: 110px; left: 70px;}
+	#mathQuiz .progress {width: 300px; top: 70px; left: 45px;}
 	#mathQuiz .progress div { width: 25px; height: 25px; margin-right: 20px;}
 	#mathQuiz .progress div::after {width: 53px; height: :33px;}
 
 	#mathQuiz .intro {width:300px; top: 115px; left: 330px;}
 
-	#mathQuiz .question {width: 300px; top: 160px; left: 330px;}
+	#mathQuiz .question {width: 300px; top: 120px; left: 330px;}
 	#mathQuiz .question .txt {font-size: 1.2em; margin 0px 0px 20px 0px; background-size:80% 100%;}
-	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 100%;}
+	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 80%;}
 	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; width:90%;}
 	#mathQuiz .question .ans.image {max-height: 60px; background-size: auto 45px;}
 	#mathQuiz .question .ans.image:hover {background-color:  #000;}
@@ -192,6 +201,6 @@ body { background-color: #fff; width:100%;}
 	#mathQuiz .results {width: 260px; top: 150px; left: 330px;}
 	#mathQuiz .results .share {margin-top: 20px;}
 	#mathQuiz .results a.btn {margin-bottom: 20px;}
-	#mathQuiz .active {left: 70px; width:85%;}
+	#mathQuiz .active {left: 45px; width:80%;}
 	#mathQuiz .intro.inactive, #mathQuiz .inactive.answered {left: :-650px;}
 }
