--- a/css/quiz.css
+++ b/css/quiz.css
@@ -22,7 +22,7 @@ body { background-color: #fff; width:100%; }
 #mathQuiz .literally .color-well { width:30px; }
 #mathQuiz .literally .lc-picker .toolbar-button.selected:not(.disabled){ background-color: rgba(150,0,0,0.2); }
 #mathQuiz .literally.toolbar-at-top .lc-options {bottom:0; top:auto; border-bottom:none; position:fixed;background-color: rgba(0,0,0,0.05);}
-#mathQuiz .literally .lc-drawing.with-gui {right: 0;top: 0; position: absolute; left: 0; bottom:0;cursor: default;z-index:0;}
+#mathQuiz .literally .lc-drawing.with-gui {right: 0;top: 0; position: absolute; left: 0; bottom:0;cursor: default;z-index:40;}
 
 #mathQuiz h1 {
 	font-weight: 100; font-size: 1.2em; text-transform: uppercase; margin: 0px;
@@ -104,7 +104,7 @@ body { background-color: #fff; width:100%; }
 
 #mathQuiz .question .ans { 
 	display: inline-block; font-size: 1.1em; width: 225px; border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 0px;	padding:10px; margin: 0px 15px 15px 0px; position: relative;
+	border-radius: 0px;	padding:10px; margin: 0px 15px 15px 0px; position: relative;z-index:40;
 }
 
 #mathQuiz .question .ans.image {
@@ -132,7 +132,7 @@ body { background-color: #fff; width:100%; }
 #mathQuiz .feedback { 
 	color: #efbe5e; margin-top: 10px; transition: opacity 1.5s, margin-top 1.5s;
 	visibility: hidden; opacity: 0;}
-#mathQuiz .feedback .btn { margin-top:  5px; }
+#mathQuiz .feedback .btn { margin-top:  5px;position:absolute;z-index:40; }
 #mathQuiz .feedback strong {color: #000}
 
 #mathQuiz .answered .feedback { visibility: visible; opacity: 1; margin-top: 10px}
