--- a/css/quiz.css
+++ b/css/quiz.css
@@ -58,10 +58,12 @@ body { background-color: #fff; width:100%; }
 	display: inline-block; cursor: pointer; background-color: green;
 	color: #fff; text-decoration: none;
 	padding: 5px 15px;
+	position:absolute;
+	z-index:40;
 }
 
 /* Progress Bar */
-#mathQuiz .progress {width: 550px; position: absolute;top:100px; left: 45px}
+#mathQuiz .progress {width: 550px; position: absolute;top:100px; left: 45px;}
 #mathQuiz .progress div {
 	position: relative;	display: inline-block; width: 30px; height: 30px; margin-right: 30px;
 	border-radius: 50%;	background-color: rgba(0, 0, 0, .2); transition: background-color 1s;
@@ -102,7 +104,7 @@ body { background-color: #fff; width:100%; }
 
 #mathQuiz .question .ans { 
 	display: inline-block; font-size: 1.1em; width: 225px; border: 2px solid rgba(238,189,102,.4); 
-	border-radius: 0px;	padding:10px; margin: 0px 15px 15px 0px; position: relative;
+	border-radius: 0px;	padding:10px; margin: 0px 15px 15px 0px; position: relative;z-index:40;
 }
 
 #mathQuiz .question .ans.image {
@@ -130,7 +132,7 @@ body { background-color: #fff; width:100%; }
 #mathQuiz .feedback { 
 	color: #efbe5e; margin-top: 10px; transition: opacity 1.5s, margin-top 1.5s;
 	visibility: hidden; opacity: 0;}
-#mathQuiz .feedback .btn { margin-top:  5px; }
+#mathQuiz .feedback .btn { margin-top:  5px;position:absolute;z-index:40; }
 #mathQuiz .feedback strong {color: #000}
 
 #mathQuiz .answered .feedback { visibility: visible; opacity: 1; margin-top: 10px}
