--- a/css/quiz.css
+++ b/css/quiz.css
@@ -109,7 +109,7 @@ body { background-color: #fff; width:100%; }
 
 #mathQuiz .question .ans.image {
 	width:225px; min-height:110px; padding: 0px; background-repeat: no-repeat;
-	background-position: 0px 0px; background-size:auto 100%;
+	background-position: 0px 0px; background-size:40%;
 }
 
 #mathQuiz .question .ans.selected { border-color: #be4616 }
@@ -197,7 +197,7 @@ body { background-color: #fff; width:100%; }
 	#mathQuiz .question .txt {font-size: 1.2em; margin 0px 0px 20px 0px; background-size:80% 100%;}
 	#mathQuiz .question .question_image { background-repeat:no-repeat; background-position:center; background-size:80% 80%;}
 	#mathQuiz .question .ans {font-size: 1em; padding: 5px 10px; margin-bottom: 10px; width:90%;}
-	#mathQuiz .question .ans.image {max-height: 60px; background-size: auto 100%;}
+	#mathQuiz .question .ans.image {max-height: 60px; background-size: 100%;}
 	#mathQuiz .question .ans.image:hover {background-color:  #000;}
 
 	#mathQuiz .results {width: 260px; top: 150px; left: 330px;}
