--- a/css/quiz.css
+++ b/css/quiz.css
@@ -62,6 +62,12 @@ body { background-color: #fff; width:100%; }
 	z-index:40;
 }
 
+#mathQuiz #exit {
+    position: fixed;
+    top: 10px;
+    right: 15px;
+}
+
 /* Progress Bar */
 #mathQuiz .progress {width: 550px; position: absolute;top:100px; left: 45px;}
 #mathQuiz .progress div {
